--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="title_home">Home</string>
     <string name="title_profile">Profile</string>
     <string name="title_search">Search</string>
+
+    <string name="menu_refresh">Refresh</string>
+    <string name="setting_menu">Settings</string>
+    <string name="share_menu">Share</string>
 </resources>
