--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="menu_refresh">Refresh</string>
     <string name="setting_menu">Settings</string>
     <string name="share_menu">Share</string>
+    <string name="profile_name">Profile Name</string>
+    <string name="profile_username">username</string>
 </resources>
