Memperbarui icon di app bar profile fragment dan merapikan beberapa elemen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="profile_bio">Android Developer | Backend Developer | IT Support</string>
     <string name="message_notification_menu">Message Notification</string>
     <string name="email_notification_menu">Email Notification</string>
+    <string name="plus_menu">Plus</string>
 </resources>
