Menambahkan fitur search bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_profile">Profile</string>
     <string name="title_search">Search</string>
-
     <string name="menu_refresh">Refresh</string>
     <string name="setting_menu">Settings</string>
     <string name="share_menu">Share</string>
@@ -27,4 +26,6 @@
     <string name="profile_organization">Universitas Diponegoro</string>
     <string name="repository_template">Repository</string>
     <string name="user_repository">140</string>
+    <string name="searchbar_hint">Search</string>
+    <string name="microphone_menu">Microphone</string>
 </resources>
