Menyelesaikan tampilan search fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,6 @@
     <string name="user_repository">140</string>
     <string name="searchbar_hint">Search</string>
     <string name="microphone_menu">Microphone</string>
+    <string name="search_person_template_1">Who are\nyou searching for?</string>
+    <string name="search_person_template_2">Search for your favorite thing or find\nsimilar results in this area</string>
 </resources>
