--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_home">Home</string>
     <string name="title_profile">Profile</string>
     <string name="title_search">Search</string>
+    <string name="title_following_follower">Following Follower</string>
+    <string name="title_detail">Detail</string>
 
     <!-- User Resource -->
     <string name="user_organization">Universitas Diponegoro</string>
