Menyelesaikan awal pembuatan tab layout dan juga view pager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="searchbar_hint">Search</string>
     <string name="search_person_template_1">Who are\nyou searching for?</string>
     <string name="search_person_template_2">Search for your favorite thing or find\nsimilar results in this area</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
