Merapikan res folder sebagian

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="searchbar_hint">Search</string>
     <string name="search_person_template_one">Who are\nyou searching for?</string>
     <string name="search_person_template_two">Search all of GitHub for People,\n Repositories, and Repositories</string>
+    <string name="hamburger_menu">Hamburger</string>
+    <string name="notification_menu">Notification</string>
 
 </resources>
