--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,5 +52,6 @@
     <!-- Content Description -->
     <string name="nested_scroll_view_desc">NestedScroll View</string>
     <string name="tab_layout_desc">Tab Layout</string>
+    <string name="theme_sample">Theme</string>
 
 </resources>
